# URL-Shortener

./: README.md  pyproject.toml
src/: .env.sample
src/apps/shortener/: apis.py  controllers.py  models.py  schemas.py
src/core/: config.py  main.py  router.py
src/middlewares/: response_schema.py
src/migrations/: env.py
src/services/: redis.py
